@@ -24,11 +24,7 @@ import org.apache.jena.graph.Triple;
 import org.junit.Before;
 import org.junit.Test;
 
-import java.util.ArrayList;
-import java.util.ConcurrentModificationException;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Spliterator;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
@@ -78,14 +74,14 @@ public class IndexListSpliteratorTest {
     @Test
     public void streamYieldsAllTriples() {
         final var sp = new IndexListSpliterator(triples, list);
-        final var collected = StreamSupport.stream(sp, false).collect(Collectors.toList());
+        final var collected = StreamSupport.stream(sp, false).toList();
         assertEquals(new HashSet<>(expected), new HashSet<>(collected));
     }
 
     @Test
     public void parallelStreamYieldsAllTriples() {
         final var sp = new IndexListSpliterator(triples, list);
-        final var collected = StreamSupport.stream(sp, true).collect(Collectors.toList());
+        final var collected = StreamSupport.stream(sp, true).toList();
         assertEquals(new HashSet<>(expected), new HashSet<>(collected));
     }
 
